--- a/src/components/mainPage.css
+++ b/src/components/mainPage.css
@@ -1,3 +1,5 @@
+
+/* central part */
 .fashion-container{
     background-color: #d8d8d8;
     width: 100%;
@@ -6,28 +8,36 @@
     top: 0;
     left: 0;
 }
-
+/* left part */
 .art-container{
-    position: absolute;
-    top: 0;
-    left: 0;
     border-top: 700px solid #ededed;
     border-right: 300px solid transparent;
     height: 0;
     width: 376px;
     filter: drop-shadow(0 1px 5px rgba(0,0,0,.5));
 }
-
+/* right part */
 .music-container{
-    position: absolute;
-    top: 0;
-    right: 0;
     border-top: 700px solid #dcdcdc;
     border-left: 300px solid transparent;
     height: 0;
     width: 384px;
     filter: drop-shadow(0 1px 5px rgba(0,0,0,.5));
 }
+
+/* container which contain left and right part */
+.curtains-container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:700px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .menu-container{
     width: 100%;
@@ -64,5 +74,40 @@ align-items: center;
 
 menu > li > a{
     text-align: center;
+}
+/* left menu */
+.additional-menu{
+    position: absolute;
+    left: -60%;
+    top:20px;
+    border-top: 120px solid #070707;
+    border-right: 60px solid transparent;
+    height: 70px;
+    width: 70%;
+    filter: drop-shadow(0 5px 5px rgba(0,0,0,.5));
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.additional-menu-icon{
+    transform: scale(-1, 1);
+    width: 45px;
+    height: 45px;
+    position: inherit;
+    top: -85px;
+    right: 26px;
+}
+.search{
+    position: absolute;
+    right: 0;
+    top: 20px;
+    border-bottom: 120px solid white;
+    border-left: 60px solid transparent;
+    height: 70px;
+    width: 70%;
+    filter: drop-shadow(0 5px 5px rgba(0,0,0,.5));
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
