--- a/src/components/mainPage.css
+++ b/src/components/mainPage.css
@@ -12,23 +12,29 @@
 }
 /* left part */
 .art-container{
-    border-top: 700px solid #ededed;
-    border-right: 300px solid transparent;
-    height: 0;
-    width: 376px;
+    background-color: #ededed;
+    height: 700px;
     filter: drop-shadow(0 1px 5px rgba(0,0,0,.5));
+    transition: width 1.5s ease;
+}
+.music-art{
+    height: 600px;
+    width: 50%;
 }
 /* right part */
 .music-container{
-    border-top: 700px solid #dcdcdc;
-    border-left: 300px solid transparent;
-    height: 0;
-    width: 384px;
+    background-color: #dcdcdc;
+    height: 700px;
     filter: drop-shadow(0 1px 5px rgba(0,0,0,.5));
+    transition: width 1.5s ease;
+}
+.music-brace{
+    height: 600px;
+    width: 50%;
 }
 
 /* container which contain left and right part */
-.curtains-container{
+.curtains-music-container{
     position: absolute;
     top: 0;
     left: 0;
@@ -36,7 +42,19 @@
     height:700px;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+.curtains-art-container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:700px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -55,6 +73,9 @@ width: 250px;
 display: flex;
 justify-content: center;
 align-items: center;
+cursor: pointer;
+transition: color 1s ease;
+animation-delay: 1.5s;
 }
 
 .menu-container > p{
@@ -63,6 +84,8 @@ width: 250px;
 display: flex;
 justify-content: center;
 align-items: center;
+transition: color 1s ease;
+animation-delay: 1.5s;
 }
 
 .menu{
@@ -72,8 +95,13 @@ align-items: center;
     width: 220px;
     list-style-type: none;
     padding-left: 15px;
+    cursor: pointer;
+    transition: color 4s ease;
 }
-
+.menu > li{
+    transition: color 1s ease;
+    animation-delay: 1.5s;
+}
 .menu > li > a:hover{
     opacity: 0.8;
 }
@@ -84,24 +112,43 @@ align-items: center;
 /* left menu */
 .additional-menu{
     position: absolute;
-    left: 0px;
     top:20px;
-    border-top: 120px solid #070707;
-    border-right: 60px solid transparent;
-    height: 70px;
+    left: -62%;
+    background-color: #070707;
+    height: 120px;
     width: 70%;
     filter: drop-shadow(0 5px 5px rgba(0,0,0,.5));
-    display: none;
-    justify-content: flex-end;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
     align-items: center;
+    opacity: 0.7;
+    transition: all 1s ease;
 }
+.additional-menu-items{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+    color: white;
+    opacity: 0.8;
+    width: 500px;
+    height: inherit;
+}
+
+.additional-menu-items > li{
+    margin-bottom: 16px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+
 .additional-menu-icon{
     transform: scale(-1, 1);
     width: 45px;
     height: 45px;
-    position: inherit;
-    top: -85px;
-    right: 26px;
+    margin-right: 30px;
 }
 .search{
     position: absolute;
