--- a/src/components/mainPage.css
+++ b/src/components/mainPage.css
@@ -121,21 +121,24 @@ animation-delay: 1.5s;
 .menu > li > a:active{
     opacity: 0.5;
 }
+.main-menu-item{
+    transition: color 1s ease;
+    animation-delay: 1.5s;
+}
 
 /* left menu */
 .additional-menu{
     position: absolute;
     top:20px;
     left: -62%;
-    background-color: #070707;
+    background-image: url(".././icons/Rectangle.svg");
     height: 120px;
     width: 70%;
-    filter: drop-shadow(0 5px 5px rgba(0,0,0,.5));
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
-    opacity: 0.7;
+    opacity: 0.9;
     transition: all 1s ease;
 }
 .additional-menu-items{
