--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@
 }
 .fade-exit .fade-exit-active{
     opacity: 0;
-    transition: opacity 1500ms linear;
+    transition: opacity 1500ms ease-in;
+}
+.page{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
