--- a/src/styles/mainPage.css
+++ b/src/styles/mainPage.css
@@ -8,17 +8,7 @@ html, body {
     justify-content: flex-start;
     align-items: center;
 }
-#pasika{
-    cursor: pointer;
-    transition: color 1s ease;
-    animation-delay: 1.5s;
-}
-#pasika:hover{
-    opacity: 0.8;
-}
-#pasika:active{
-    opacity: 0.5;
-}
+
 
 /* central part */
 .fashion-container{
@@ -75,71 +65,6 @@ html, body {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-}
-
-
-.menu-container{
-    width: 21%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.menu-container > h2{
-margin-bottom: 0;
-width: 250px;
-display: flex;
-justify-content: center;
-align-items: center;
-cursor: pointer;
-transition: color 1s ease;
-animation-delay: 1.5s;
-font-family: 'Montserrat', sans-serif;
-font-weight: bold;
-font-size: 28px;
-
-}
-
-.menu-container > p{
-margin-top: 0;
-width: 250px;
-display: flex;
-justify-content: center;
-align-items: center;
-transition: color 1s ease;
-animation-delay: 1.5s;
-font-family: 'Montserrat', sans-serif;
-font-weight: 200;
-font-size: 19px;
-}
-
-.menu{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 220px;
-    list-style-type: none;
-    padding-left: 15px;
-    cursor: pointer;
-    transition: color 4s ease;
-    margin-top: -2px;
-}
-.menu > li{
-    transition: color 1s ease;
-    animation-delay: 1.5s;
-}
-.menu > li > a:hover{
-    opacity: 0.8;
-}
-.menu > li > a:active{
-    opacity: 0.5;
-}
-.main-menu-item{
-    transition: color 1s ease;
-    animation-delay: 1.5s;
-    font-family: 'Montserrat', sans-serif;
-    opacity: 0.8;
 }
 
 /* left menu */
@@ -255,31 +180,32 @@ font-size: 19px;
     left:0;
     bottom: 40px;
     width: 100%;
-    height: 50px;
+    height: 80px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 }
-.insta,
-.facebook{
+.social-icons{
     width: 35px;
     height: 35px;
     margin-right: 20px;
     cursor: pointer;
 }
-.insta:hover{
+
+.social-icons:hover{
     opacity: 0.8;
 }
-.facebook:hover{
-   opacity: 0.8;
-}
-.insta:active{
+
+.social-icons:active{
     opacity: 0.5;
 }
-.facebook:active{
-    opacity: 0.5;
+#hive{
+    margin-left: 30px;
+    width: 50px;
+    height: 50px;
 }
+
 .copyright-container{
     width: 100%;
     position: absolute;
@@ -319,19 +245,7 @@ font-size: 19px;
     .additional-menu-icon{
         display: none;
     }
-    .menu-container{
-        width: 21%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .menu-container > h2{
-      margin-top: 0;        
-    }
-    .menu-container > p{
-        margin-bottom: 10px;    
-    }
+
     .search-icon{
         display: none;
     }
